--- a/examples/demo-custom.html
+++ b/examples/demo-custom.html
@@ -10,7 +10,7 @@
 
 <button type="button" id="btnTheme">Change Theme</button>
 <div id="image-container">
-	<img src="images/sample-image.jpg">
+	<img src="images/sample-image1.jpg">
 </div>
 
 
